# CrabKey

./: .gitignore  CrabKey_Architecture.md  README.md  TUI_IMPROVEMENTS.md  install.sh  pyproject.toml
.crabkey/: config.toml  memory.db
crabkey-ui/: .eslintrc.json  README.md  package.json
crabkey-ui/src/: app.tsx  entry.tsx
crabkey/cli/: app.py  bridge.py  commands.py  configure.py  extensions.py  launcher.py  repl.py  tui_gateway.py  ui.py
crabkey/cognition/: __init__.py  context_assembler.py  context_files.py  memory_manager.py  reflector.py
crabkey/mal/: __init__.py  message.py  model_catalog.py  plugin_provider.py  profile.py  provider.py  provider_registry.py  transport.py
crabkey/observability/: telemetry.py
crabkey/orchestration/: __init__.py  agent_router.py  hook_dispatcher.py  loop_engine.py  planner.py  session_manager.py  thread_manager.py
crabkey/persistence/: __init__.py  config.py  db.py  vector_store.py
crabkey/plugins/: __init__.py
crabkey/safety/: __init__.py  checkpoint.py  permission_broker.py  sandbox.py
crabkey/tools/: __init__.py  agent_tool.py  base.py  file_tool.py  mcp_client.py  memory_tool.py  search_tool.py  shell_tool.py  web_tool.py
tests/: conftest.py  test_cognition.py  test_fixes.py  test_mal_message.py  test_mal_profile.py  test_mal_transport.py  test_persistence.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_provider_registry.py  test_safety.py  test_sessions_and_threads.py
tui/: README.md  package-lock.json  package.json  tsconfig.json
tui/source/: App.tsx  backend.ts  cli.tsx  (+3 more)
(+44 files in other folders)
