[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crabkey"
version = "0.1.0"
description = "Model-agnostic agentic coding CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "tomli>=2.0; python_version < '3.11'",
    "numpy>=1.26",
    "anthropic>=0.28",
    "openai>=1.30",
]

[project.scripts]
crabkey = "crabkey.cli.app:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.10"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
